# dialog

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
analysis/: analyze_ugm_learning_experiment.py
models/: binarized_count_ising.py  binarized_count_ising_with_bmrs.py  inference.py  initialization.py  learning.py  method.py
scripts/: hyperparam_auc_eval.py  ms_batch.sh  ms_batch_dialog_and_baseline.sh  ms_batch_hyperparam_evals.sh  ss_batch_dialog_and_baseline.sh  ss_single_hyperparam_eval.sh  ssbatch.sh
src/baselines/: __main__.py  bmr_inverse_covariance.py  naive_inverse_covariance.py
src/dialog/: __main__.py
src/dialog/models/: __init__.py  inference.py  initialization.py  learning.py  method.py  structures.py
src/dialog/utils/: __init__.py  argument_parser.py  dialog.py
src/plotting/: __init__.py  __main__.py  curves.py  styling.py
