[metadata]
name = dialog
version = 0.0.1
author = Ahmed Shuaibi
description = Graphical model for learning dependencies between driver mutations in cancer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphael-group/dialog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    dialog = src/dialog
    plotting = src/plotting
    baselines = src/baselines
include_package_data = True
python_requires = >=3.9
install_requires =
    pandas
    numpy

[options.packages.find]
where =
    src

[options.package_data]
exernal = *.py

[options.entry_points]
console_scripts =
    dialog = dialog.__main__:main
